# matroska_tags_editor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json  svelte.config.js  vcpkg.json
.github/scripts/: bundle_macos_dylibs.sh  generate_release_notes.sh  prefetch_vcpkg_sources.ps1
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  drop-window.json
src-tauri/src/: drop.rs  lib.rs  main.rs
src/app/: main.cpp
src/core/: matroska_reader.cpp  matroska_reader.h  matroska_writer.cpp  matroska_writer.h  tag_document.cpp  tag_document.h
src/lib/: store.ts  useGlobalDrag.ts
src/lib/components/: ContextMenu.svelte  Toolbar.svelte  TreeNode.svelte
src/routes/: +page.svelte
static/: drop-window.html
