[package]
name = "matroska_tags_editor"
version = "0.1.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "matroska_tags_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.8.0", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = "2.0.0-beta.9"
tauri-plugin-fs = "2.0.0-beta.7"
tauri-plugin-shell = "2.0.0-beta.7"
tauri-plugin-process = "2.0.0-beta.8"
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
log = "0.4"
tokio = { version = "1", features = ["sync", "process"] }
quick-xml = { version = "^0.37.0", features = ["serialize"] }
tempfile = "3"
futures = "0.3"
matroska = "0.30.0"
ebml-iterable = "^0.6.0"

